fix the rest doc